--- a/sass/_varisco.scss
+++ b/sass/_varisco.scss
@@ -23,7 +23,7 @@
   ul {
   	  font-size: 3em;
       line-height: 1em;
-      margin: 0;
+      margin: 0 0 0 0.5em;
 	  padding: 0;
 	li {
 	  list-style: none;
