--- a/css/styles.css
+++ b/css/styles.css
@@ -2396,7 +2396,7 @@ tr.selected td {
 #block-system-main-menu ul {
   font-size: 3em;
   line-height: 1em;
-  margin: 0 0 0 0.5em;
+  margin: 0;
   padding: 0;
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/websites\/TomVarisco\/rel\/sites\/all\/themes\/varisco\/sass\/_varisco\.scss}line{font-family:\0000328}}
