--- a/sass/_varisco.scss
+++ b/sass/_varisco.scss
@@ -11,7 +11,7 @@
 .header__site-name {
   font-size: 1em;
   line-height: 1.5em;
-  margin: 2em 1.5em 0;
+  margin-top: 2em;
 }
 .views-field-title {
 	color: $dark-orange;
