--- a/css/styles.css
+++ b/css/styles.css
@@ -2402,7 +2402,7 @@ tr.selected td {
 @media -sass-debug-info{filename{font-family:file\:\/\/\/websites\/TomVarisco\/rel\/sites\/all\/themes\/varisco\/sass\/_varisco\.scss}line{font-family:\0000328}}
 #block-system-main-menu ul li {
   list-style: none;
-  list-style-position: inside;
+  list-style-position: outside;
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/websites\/TomVarisco\/rel\/sites\/all\/themes\/varisco\/sass\/_varisco\.scss}line{font-family:\0000331}}
 #block-system-main-menu ul li a {
