--- a/sass/_varisco.scss
+++ b/sass/_varisco.scss
@@ -27,7 +27,7 @@
 	  padding: 0;
 	li {
 	  list-style: none;
-	  list-style-position: inside;
+	  list-style-position: outside;
 	  a {
 		color: $gray;
 		text-decoration: none;
