--- a/sass/_varisco.scss
+++ b/sass/_varisco.scss
@@ -26,11 +26,18 @@
   color: $dark-orange;
   display: block;
   font-size: 1.25em;
+  text-transform: uppercase;
 }
 .field-name-field-project-description {
 	border-top: 1px solid $lighter-gray;
 	border-bottom: 1px solid $lighter-gray;
 	color: $dark-gray;
+}
+.view-project-client {
+	text-transform: uppercase;
+	a {
+		color: $dark-orange;
+	}
 }
 #block-system-main-menu {
   ul {
