--- a/sass/_varisco.scss
+++ b/sass/_varisco.scss
@@ -12,6 +12,7 @@
 .header__site-name,#block-system-main-menu h2 {
   font-size: 1em;
   line-height: 1.5em;
+  font-weight: normal;
 }
 .views-field-title {
 	color: $dark-orange;
