--- a/css/styles.css
+++ b/css/styles.css
@@ -2505,4 +2505,9 @@ tr.selected td {
   background: none repeat scroll 0 0 #717272;
 }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/websites\/TomVarisco\/rel\/sites\/all\/themes\/varisco\/sass\/_varisco\.scss}line{font-family:\00003104}}
+.masonry-item {
+  width: 30%;
+}
+
 /* @import "theme-B"; */
